@startuml
class Principal {

}

class HeadTeacher {
    + name
}

class Pupil {
    + name
}

class SchoolClass {
    + letter
    + grade
    + year
}

Principal .-down-> SchoolClass : Creates >
Principal .-down-> SchoolClass : Adds pupils to the class
SchoolClass "1" -- "1" HeadTeacher: has >
SchoolClass "1" o-- "many" Pupil: contains >
@enduml